namespace KPG.Timesheet.Domain.Constants;

public static class ParametrosSistema
{
    public const string VentanaRetroactividad = "VentanaRetroactividad";
    public const string DiasUmbralNotificacion = "DiasUmbralNotificacion";
}
